// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PdtpCreateProgramForm > F: Snapshot > coincide con el snapshot con año personalizado activo 1`] = `
<form
  action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  class="overflow-hidden rounded-[var(--radius-2xl)] border border-[var(--color-border)] bg-[var(--color-surface)] shadow-[var(--shadow-card)]"
>
  <input
    name="userId"
    type="hidden"
    value="user-1"
  />
  <div
    class="border-b border-[var(--color-border)] bg-[var(--color-surface-2)] px-5 py-4 sm:px-6"
  >
    <div
      class="flex items-center gap-1 sm:gap-2"
    >
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-primary)] text-white"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 256 256"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M208,144a15.78,15.78,0,0,1-10.42,14.94L146,178l-19,51.62a15.92,15.92,0,0,1-29.88,0L78,178l-51.62-19a15.92,15.92,0,0,1,0-29.88L78,110l19-51.62a15.92,15.92,0,0,1,29.88,0L146,110l51.62,19A15.78,15.78,0,0,1,208,144ZM152,48h16V64a8,8,0,0,0,16,0V48h16a8,8,0,0,0,0-16H184V16a8,8,0,0,0-16,0V32H152a8,8,0,0,0,0,16Zm88,32h-8V72a8,8,0,0,0-16,0v8h-8a8,8,0,0,0,0,16h8v8a8,8,0,0,0,16,0V96h8a8,8,0,0,0,0-16Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text)]"
        >
          Crear
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-primary)]/30"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          2
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Editar actividades
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-border)]"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          3
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Aprobar
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-border)]"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          4
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Activar
        </span>
      </div>
    </div>
    <p
      class="mt-3 text-xs text-[var(--color-text-muted)]"
    >
      Paso 1: Definir año y título. Después podrás definir objetivos, actividades y su frecuencia.
    </p>
  </div>
  <div
    class="flex flex-col gap-6 p-5 sm:p-6"
  >
    <div
      aria-label="¿Qué año quieres planificar?"
      role="group"
    >
      <p
        class="text-xs font-semibold uppercase tracking-wide text-text-subtle mb-2"
      >
        ¿Qué año quieres planificar?
      </p>
      <input
        name="year"
        type="hidden"
        value="2026"
      />
      <div
        aria-label="Seleccionar año"
        class="flex flex-wrap gap-2"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-text)]"
          >
            2025
          </span>
          <span
            class="text-[9px] text-[var(--color-text-faint)]"
          >
            Pasado
          </span>
        </button>
        <button
          aria-checked="false"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-text)]"
          >
            2026
          </span>
        </button>
        <button
          aria-checked="false"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-text)]"
          >
            2027
          </span>
        </button>
        <input
          aria-label="Año personalizado"
          class="flex h-9 rounded-(--radius-lg) border border-[var(--color-border-control)] bg-[var(--color-surface)] px-3.5 py-1.5 font-sans text-sm text-[var(--color-text)] placeholder:text-[var(--color-text-subtle)] transition-[border-color,box-shadow] duration-[var(--duration-fast)] ease-[var(--ease-out)] hover:border-[var(--color-border-control-hover)] focus:outline-none focus:border-[var(--color-primary)] focus:ring-2 focus:ring-[var(--color-primary-line)] disabled:cursor-not-allowed disabled:opacity-50 disabled:bg-[var(--color-surface-2)] disabled:hover:border-[var(--color-border-control)] read-only:bg-[var(--color-surface-2)] read-only:cursor-default read-only:hover:border-[var(--color-border-control)] w-24"
          id="pdtp-year-custom"
          max="2028"
          min="2024"
          type="number"
          value="2026"
        />
      </div>
    </div>
    <div
      class="flex flex-col gap-0"
    >
      <label
        class="block text-sm font-medium text-[var(--color-text)] leading-tight mb-1.5"
        for="pdtp-title"
        id="pdtp-title-label"
      >
        Título del programa
        <span
          aria-hidden="true"
          class="ml-0.5 text-[var(--color-danger)]"
        >
          *
        </span>
      </label>
      <input
        class="flex h-9 w-full rounded-(--radius-lg) border border-[var(--color-border-control)] bg-[var(--color-surface)] px-3.5 py-1.5 font-sans text-sm text-[var(--color-text)] placeholder:text-[var(--color-text-subtle)] transition-[border-color,box-shadow] duration-[var(--duration-fast)] ease-[var(--ease-out)] hover:border-[var(--color-border-control-hover)] focus:outline-none focus:border-[var(--color-primary)] focus:ring-2 focus:ring-[var(--color-primary-line)] disabled:cursor-not-allowed disabled:opacity-50 disabled:bg-[var(--color-surface-2)] disabled:hover:border-[var(--color-border-control)] read-only:bg-[var(--color-surface-2)] read-only:cursor-default read-only:hover:border-[var(--color-border-control)]"
        id="pdtp-title"
        name="title"
        placeholder="Programa de Trabajo Preventivo SG-SST 2026"
        required=""
        value="Programa de Trabajo Preventivo SG-SST 2026"
      />
      <p
        class="mt-1 text-[11px] text-[var(--color-text-faint)]"
      >
        Se genera automáticamente. Puedes editarlo si lo necesitas.
      </p>
    </div>
    <div
      class="space-y-3"
    >
      <div
        class="flex items-center justify-between"
      >
        <p
          class="text-xs font-semibold uppercase tracking-wide text-text-subtle"
        >
          Elegir punto de partida
        </p>
      </div>
      <p
        class="text-xs text-[var(--color-text-muted)]"
      >
        Usa una plantilla publicada o copia un período anterior. Nunca se copian ejecuciones, evidencias ni firmas.
      </p>
      <input
        name="copySheetsFromProgramId"
        type="hidden"
        value=""
      />
      <input
        name="templateVersionId"
        type="hidden"
        value=""
      />
      <button
        aria-checked="true"
        class="w-full rounded-[var(--radius)] border p-3 text-left transition-all border-[var(--color-primary)] bg-[var(--color-primary-tint)] ring-1 ring-[var(--color-primary)]"
        role="radio"
        type="button"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-full border-2 text-xs font-bold transition-colors border-[var(--color-primary)] bg-[var(--color-primary)] text-white"
          >
            <svg
              fill="currentColor"
              height="13"
              viewBox="0 0 256 256"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M168,152a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,152Zm-8-40H96a8,8,0,0,0,0,16h64a8,8,0,0,0,0-16Zm56-64V216a16,16,0,0,1-16,16H56a16,16,0,0,1-16-16V48A16,16,0,0,1,56,32H92.26a47.92,47.92,0,0,1,71.48,0H200A16,16,0,0,1,216,48ZM96,64h64a32,32,0,0,0-64,0ZM200,48H173.25A47.93,47.93,0,0,1,176,64v8a8,8,0,0,1-8,8H88a8,8,0,0,1-8-8V64a47.93,47.93,0,0,1,2.75-16H56V216H200Z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="truncate text-sm font-medium text-[var(--color-text)]"
            >
              Programa vacío
            </p>
            <p
              class="text-xs text-[var(--color-text-muted)]"
            >
              Empieza con una vista general y construye objetivos, actividades y frecuencias sin depender del Excel.
            </p>
          </div>
        </div>
      </button>
      <div
        aria-label="Programas existentes"
        class="space-y-2"
        role="radiogroup"
      >
        <p
          class="text-[11px] font-semibold uppercase tracking-wide text-[var(--color-text-subtle)]"
        >
          Períodos anteriores
        </p>
        <button
          aria-checked="false"
          class="w-full rounded-[var(--radius)] border p-3 text-left transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)] hover:shadow-sm"
          role="radio"
          type="button"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-full border-2 text-xs font-bold transition-colors border-[var(--color-border)] text-[var(--color-text-faint)]"
            >
              26
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <div
                class="flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="truncate text-sm font-medium text-[var(--color-text)]"
                    >
                      Programa General 2026
                    </p>
                    <span
                      class="inline-flex items-center gap-1.5 rounded-[var(--radius-full)] px-2 py-0.5 whitespace-nowrap font-mono font-semibold uppercase tracking-wider text-[var(--color-success-ink)] bg-[var(--color-success-tint)] text-[11px]"
                    >
                      Activo
                    </span>
                  </div>
                  <div
                    class="mt-1 flex flex-wrap items-center gap-x-3 gap-y-1 text-xs text-[var(--color-text-muted)]"
                  >
                    <span>
                      Año 
                      2026
                       · v
                      1
                    </span>
                    <span>
                      89
                       actividades
                    </span>
                    <span
                      class="font-medium text-[var(--color-signal)]"
                    >
                      75
                      % cumplimiento
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-checked="false"
          class="w-full rounded-[var(--radius)] border p-3 text-left transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)] hover:shadow-sm"
          role="radio"
          type="button"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-full border-2 text-xs font-bold transition-colors border-[var(--color-border)] text-[var(--color-text-faint)]"
            >
              25
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <div
                class="flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="truncate text-sm font-medium text-[var(--color-text)]"
                    >
                      Programa Faenas 2025
                    </p>
                    <span
                      class="inline-flex items-center gap-1.5 rounded-[var(--radius-full)] px-2 py-0.5 whitespace-nowrap font-sans font-medium normal-case tracking-normal text-[var(--color-text-muted)] bg-[var(--color-surface-2)] text-[11px]"
                    >
                      Cerrado
                    </span>
                  </div>
                  <div
                    class="mt-1 flex flex-wrap items-center gap-x-3 gap-y-1 text-xs text-[var(--color-text-muted)]"
                  >
                    <span>
                      Año 
                      2025
                       · v
                      3
                    </span>
                    <span>
                      120
                       actividades
                    </span>
                    <span
                      class="font-medium text-[var(--color-success)]"
                    >
                      92
                      % cumplimiento
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col-reverse gap-2 border-t border-[var(--color-border)] pt-5 sm:flex-row sm:items-center sm:justify-between"
    >
      <button
        aria-busy="false"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-sans font-semibold text-[13px] leading-[var(--leading-label)] rounded-[var(--radius)] select-none cursor-pointer transition-[background-color,box-shadow,transform] duration-[var(--duration-fast)] ease-[var(--ease-out)] motion-safe:active:scale-[0.97] focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--color-primary)] disabled:pointer-events-none disabled:opacity-45 text-[var(--color-text-muted)] hover:bg-[var(--color-surface-2)] hover:text-[var(--color-text)] h-8 px-4"
        type="button"
      >
        Cancelar
      </button>
      <div
        class="flex items-center gap-3"
      >
        <p
          class="hidden text-xs text-[var(--color-text-faint)] sm:block"
        >
          Programa vacío con una vista general
        </p>
        <button
          data-loading-label="Creando..."
          type="submit"
        >
          Crear programa
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`PdtpCreateProgramForm > F: Snapshot > coincide con el snapshot con suggestedYear > CURRENT_YEAR 1`] = `
<form
  action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  class="overflow-hidden rounded-[var(--radius-2xl)] border border-[var(--color-border)] bg-[var(--color-surface)] shadow-[var(--shadow-card)]"
>
  <input
    name="userId"
    type="hidden"
    value="user-1"
  />
  <div
    class="border-b border-[var(--color-border)] bg-[var(--color-surface-2)] px-5 py-4 sm:px-6"
  >
    <div
      class="flex items-center gap-1 sm:gap-2"
    >
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-primary)] text-white"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 256 256"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M208,144a15.78,15.78,0,0,1-10.42,14.94L146,178l-19,51.62a15.92,15.92,0,0,1-29.88,0L78,178l-51.62-19a15.92,15.92,0,0,1,0-29.88L78,110l19-51.62a15.92,15.92,0,0,1,29.88,0L146,110l51.62,19A15.78,15.78,0,0,1,208,144ZM152,48h16V64a8,8,0,0,0,16,0V48h16a8,8,0,0,0,0-16H184V16a8,8,0,0,0-16,0V32H152a8,8,0,0,0,0,16Zm88,32h-8V72a8,8,0,0,0-16,0v8h-8a8,8,0,0,0,0,16h8v8a8,8,0,0,0,16,0V96h8a8,8,0,0,0,0-16Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text)]"
        >
          Crear
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-primary)]/30"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          2
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Editar actividades
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-border)]"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          3
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Aprobar
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-border)]"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          4
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Activar
        </span>
      </div>
    </div>
    <p
      class="mt-3 text-xs text-[var(--color-text-muted)]"
    >
      Paso 1: Definir año y título. Después podrás definir objetivos, actividades y su frecuencia.
    </p>
  </div>
  <div
    class="flex flex-col gap-6 p-5 sm:p-6"
  >
    <div
      aria-label="¿Qué año quieres planificar?"
      role="group"
    >
      <p
        class="text-xs font-semibold uppercase tracking-wide text-text-subtle mb-2"
      >
        ¿Qué año quieres planificar?
      </p>
      <input
        name="year"
        type="hidden"
        value="2027"
      />
      <div
        aria-label="Seleccionar año"
        class="flex flex-wrap gap-2"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-text)]"
          >
            2025
          </span>
          <span
            class="text-[9px] text-[var(--color-text-faint)]"
          >
            Pasado
          </span>
        </button>
        <button
          aria-checked="false"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-text)]"
          >
            2026
          </span>
          <span
            class="text-[9px] uppercase tracking-wider text-[var(--color-success)]"
          >
            En curso
          </span>
        </button>
        <button
          aria-checked="true"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-primary)] bg-[var(--color-primary-tint)] ring-1 ring-[var(--color-primary)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-primary-ink)]"
          >
            2027
          </span>
          <span
            class="text-[9px] uppercase tracking-wider text-[var(--color-primary)]"
          >
            Sugerido
          </span>
        </button>
        <button
          aria-checked="false"
          class="flex items-center justify-center rounded-[var(--radius)] border border-dashed px-4 py-2.5 text-xs text-[var(--color-text-muted)] transition-colors border-[var(--color-border)] hover:border-[var(--color-border-strong)] hover:text-[var(--color-text)]"
          role="radio"
          type="button"
        >
          Otro año…
        </button>
      </div>
    </div>
    <div
      class="flex flex-col gap-0"
    >
      <label
        class="block text-sm font-medium text-[var(--color-text)] leading-tight mb-1.5"
        for="pdtp-title"
        id="pdtp-title-label"
      >
        Título del programa
        <span
          aria-hidden="true"
          class="ml-0.5 text-[var(--color-danger)]"
        >
          *
        </span>
      </label>
      <input
        class="flex h-9 w-full rounded-(--radius-lg) border border-[var(--color-border-control)] bg-[var(--color-surface)] px-3.5 py-1.5 font-sans text-sm text-[var(--color-text)] placeholder:text-[var(--color-text-subtle)] transition-[border-color,box-shadow] duration-[var(--duration-fast)] ease-[var(--ease-out)] hover:border-[var(--color-border-control-hover)] focus:outline-none focus:border-[var(--color-primary)] focus:ring-2 focus:ring-[var(--color-primary-line)] disabled:cursor-not-allowed disabled:opacity-50 disabled:bg-[var(--color-surface-2)] disabled:hover:border-[var(--color-border-control)] read-only:bg-[var(--color-surface-2)] read-only:cursor-default read-only:hover:border-[var(--color-border-control)]"
        id="pdtp-title"
        name="title"
        placeholder="Programa de Trabajo Preventivo SG-SST 2027"
        required=""
        value="Programa de Trabajo Preventivo SG-SST 2027"
      />
      <p
        class="mt-1 text-[11px] text-[var(--color-text-faint)]"
      >
        Se genera automáticamente. Puedes editarlo si lo necesitas.
      </p>
    </div>
    <div
      class="space-y-3"
    >
      <div
        class="flex items-center justify-between"
      >
        <p
          class="text-xs font-semibold uppercase tracking-wide text-text-subtle"
        >
          Elegir punto de partida
        </p>
      </div>
      <p
        class="text-xs text-[var(--color-text-muted)]"
      >
        Usa una plantilla publicada o copia un período anterior. Nunca se copian ejecuciones, evidencias ni firmas.
      </p>
      <input
        name="copySheetsFromProgramId"
        type="hidden"
        value=""
      />
      <input
        name="templateVersionId"
        type="hidden"
        value=""
      />
      <button
        aria-checked="true"
        class="w-full rounded-[var(--radius)] border p-3 text-left transition-all border-[var(--color-primary)] bg-[var(--color-primary-tint)] ring-1 ring-[var(--color-primary)]"
        role="radio"
        type="button"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-full border-2 text-xs font-bold transition-colors border-[var(--color-primary)] bg-[var(--color-primary)] text-white"
          >
            <svg
              fill="currentColor"
              height="13"
              viewBox="0 0 256 256"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M168,152a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,152Zm-8-40H96a8,8,0,0,0,0,16h64a8,8,0,0,0,0-16Zm56-64V216a16,16,0,0,1-16,16H56a16,16,0,0,1-16-16V48A16,16,0,0,1,56,32H92.26a47.92,47.92,0,0,1,71.48,0H200A16,16,0,0,1,216,48ZM96,64h64a32,32,0,0,0-64,0ZM200,48H173.25A47.93,47.93,0,0,1,176,64v8a8,8,0,0,1-8,8H88a8,8,0,0,1-8-8V64a47.93,47.93,0,0,1,2.75-16H56V216H200Z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="truncate text-sm font-medium text-[var(--color-text)]"
            >
              Programa vacío
            </p>
            <p
              class="text-xs text-[var(--color-text-muted)]"
            >
              Empieza con una vista general y construye objetivos, actividades y frecuencias sin depender del Excel.
            </p>
          </div>
        </div>
      </button>
      <div
        aria-label="Programas existentes"
        class="space-y-2"
        role="radiogroup"
      >
        <p
          class="text-[11px] font-semibold uppercase tracking-wide text-[var(--color-text-subtle)]"
        >
          Períodos anteriores
        </p>
        <button
          aria-checked="false"
          class="w-full rounded-[var(--radius)] border p-3 text-left transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)] hover:shadow-sm"
          role="radio"
          type="button"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-full border-2 text-xs font-bold transition-colors border-[var(--color-border)] text-[var(--color-text-faint)]"
            >
              25
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <div
                class="flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="truncate text-sm font-medium text-[var(--color-text)]"
                    >
                      Programa Faenas 2025
                    </p>
                    <span
                      class="inline-flex items-center gap-1.5 rounded-[var(--radius-full)] px-2 py-0.5 whitespace-nowrap font-sans font-medium normal-case tracking-normal text-[var(--color-text-muted)] bg-[var(--color-surface-2)] text-[11px]"
                    >
                      Cerrado
                    </span>
                  </div>
                  <div
                    class="mt-1 flex flex-wrap items-center gap-x-3 gap-y-1 text-xs text-[var(--color-text-muted)]"
                  >
                    <span>
                      Año 
                      2025
                       · v
                      3
                    </span>
                    <span>
                      120
                       actividades
                    </span>
                    <span
                      class="font-medium text-[var(--color-success)]"
                    >
                      92
                      % cumplimiento
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-checked="false"
          class="w-full rounded-[var(--radius)] border p-3 text-left transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)] hover:shadow-sm"
          role="radio"
          type="button"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-full border-2 text-xs font-bold transition-colors border-[var(--color-border)] text-[var(--color-text-faint)]"
            >
              26
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <div
                class="flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="truncate text-sm font-medium text-[var(--color-text)]"
                    >
                      Programa General 2026
                    </p>
                    <span
                      class="inline-flex items-center gap-1.5 rounded-[var(--radius-full)] px-2 py-0.5 whitespace-nowrap font-mono font-semibold uppercase tracking-wider text-[var(--color-success-ink)] bg-[var(--color-success-tint)] text-[11px]"
                    >
                      Activo
                    </span>
                  </div>
                  <div
                    class="mt-1 flex flex-wrap items-center gap-x-3 gap-y-1 text-xs text-[var(--color-text-muted)]"
                  >
                    <span>
                      Año 
                      2026
                       · v
                      1
                    </span>
                    <span>
                      89
                       actividades
                    </span>
                    <span
                      class="font-medium text-[var(--color-signal)]"
                    >
                      75
                      % cumplimiento
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col-reverse gap-2 border-t border-[var(--color-border)] pt-5 sm:flex-row sm:items-center sm:justify-between"
    >
      <button
        aria-busy="false"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-sans font-semibold text-[13px] leading-[var(--leading-label)] rounded-[var(--radius)] select-none cursor-pointer transition-[background-color,box-shadow,transform] duration-[var(--duration-fast)] ease-[var(--ease-out)] motion-safe:active:scale-[0.97] focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--color-primary)] disabled:pointer-events-none disabled:opacity-45 text-[var(--color-text-muted)] hover:bg-[var(--color-surface-2)] hover:text-[var(--color-text)] h-8 px-4"
        type="button"
      >
        Cancelar
      </button>
      <div
        class="flex items-center gap-3"
      >
        <p
          class="hidden text-xs text-[var(--color-text-faint)] sm:block"
        >
          Programa vacío con una vista general
        </p>
        <button
          data-loading-label="Creando..."
          type="submit"
        >
          Crear programa
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`PdtpCreateProgramForm > F: Snapshot > coincide con el snapshot del estado por defecto (con programas existentes) 1`] = `
<form
  action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  class="overflow-hidden rounded-[var(--radius-2xl)] border border-[var(--color-border)] bg-[var(--color-surface)] shadow-[var(--shadow-card)]"
>
  <input
    name="userId"
    type="hidden"
    value="user-1"
  />
  <div
    class="border-b border-[var(--color-border)] bg-[var(--color-surface-2)] px-5 py-4 sm:px-6"
  >
    <div
      class="flex items-center gap-1 sm:gap-2"
    >
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-primary)] text-white"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 256 256"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M208,144a15.78,15.78,0,0,1-10.42,14.94L146,178l-19,51.62a15.92,15.92,0,0,1-29.88,0L78,178l-51.62-19a15.92,15.92,0,0,1,0-29.88L78,110l19-51.62a15.92,15.92,0,0,1,29.88,0L146,110l51.62,19A15.78,15.78,0,0,1,208,144ZM152,48h16V64a8,8,0,0,0,16,0V48h16a8,8,0,0,0,0-16H184V16a8,8,0,0,0-16,0V32H152a8,8,0,0,0,0,16Zm88,32h-8V72a8,8,0,0,0-16,0v8h-8a8,8,0,0,0,0,16h8v8a8,8,0,0,0,16,0V96h8a8,8,0,0,0,0-16Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text)]"
        >
          Crear
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-primary)]/30"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          2
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Editar actividades
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-border)]"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          3
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Aprobar
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-border)]"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          4
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Activar
        </span>
      </div>
    </div>
    <p
      class="mt-3 text-xs text-[var(--color-text-muted)]"
    >
      Paso 1: Definir año y título. Después podrás definir objetivos, actividades y su frecuencia.
    </p>
  </div>
  <div
    class="flex flex-col gap-6 p-5 sm:p-6"
  >
    <div
      aria-label="¿Qué año quieres planificar?"
      role="group"
    >
      <p
        class="text-xs font-semibold uppercase tracking-wide text-text-subtle mb-2"
      >
        ¿Qué año quieres planificar?
      </p>
      <input
        name="year"
        type="hidden"
        value="2026"
      />
      <div
        aria-label="Seleccionar año"
        class="flex flex-wrap gap-2"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-text)]"
          >
            2025
          </span>
          <span
            class="text-[9px] text-[var(--color-text-faint)]"
          >
            Pasado
          </span>
        </button>
        <button
          aria-checked="true"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-primary)] bg-[var(--color-primary-tint)] ring-1 ring-[var(--color-primary)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-primary-ink)]"
          >
            2026
          </span>
        </button>
        <button
          aria-checked="false"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-text)]"
          >
            2027
          </span>
        </button>
        <button
          aria-checked="false"
          class="flex items-center justify-center rounded-[var(--radius)] border border-dashed px-4 py-2.5 text-xs text-[var(--color-text-muted)] transition-colors border-[var(--color-border)] hover:border-[var(--color-border-strong)] hover:text-[var(--color-text)]"
          role="radio"
          type="button"
        >
          Otro año…
        </button>
      </div>
    </div>
    <div
      class="flex flex-col gap-0"
    >
      <label
        class="block text-sm font-medium text-[var(--color-text)] leading-tight mb-1.5"
        for="pdtp-title"
        id="pdtp-title-label"
      >
        Título del programa
        <span
          aria-hidden="true"
          class="ml-0.5 text-[var(--color-danger)]"
        >
          *
        </span>
      </label>
      <input
        class="flex h-9 w-full rounded-(--radius-lg) border border-[var(--color-border-control)] bg-[var(--color-surface)] px-3.5 py-1.5 font-sans text-sm text-[var(--color-text)] placeholder:text-[var(--color-text-subtle)] transition-[border-color,box-shadow] duration-[var(--duration-fast)] ease-[var(--ease-out)] hover:border-[var(--color-border-control-hover)] focus:outline-none focus:border-[var(--color-primary)] focus:ring-2 focus:ring-[var(--color-primary-line)] disabled:cursor-not-allowed disabled:opacity-50 disabled:bg-[var(--color-surface-2)] disabled:hover:border-[var(--color-border-control)] read-only:bg-[var(--color-surface-2)] read-only:cursor-default read-only:hover:border-[var(--color-border-control)]"
        id="pdtp-title"
        name="title"
        placeholder="Programa de Trabajo Preventivo SG-SST 2026"
        required=""
        value="Programa de Trabajo Preventivo SG-SST 2026"
      />
      <p
        class="mt-1 text-[11px] text-[var(--color-text-faint)]"
      >
        Se genera automáticamente. Puedes editarlo si lo necesitas.
      </p>
    </div>
    <div
      class="space-y-3"
    >
      <div
        class="flex items-center justify-between"
      >
        <p
          class="text-xs font-semibold uppercase tracking-wide text-text-subtle"
        >
          Elegir punto de partida
        </p>
      </div>
      <p
        class="text-xs text-[var(--color-text-muted)]"
      >
        Usa una plantilla publicada o copia un período anterior. Nunca se copian ejecuciones, evidencias ni firmas.
      </p>
      <input
        name="copySheetsFromProgramId"
        type="hidden"
        value=""
      />
      <input
        name="templateVersionId"
        type="hidden"
        value=""
      />
      <button
        aria-checked="true"
        class="w-full rounded-[var(--radius)] border p-3 text-left transition-all border-[var(--color-primary)] bg-[var(--color-primary-tint)] ring-1 ring-[var(--color-primary)]"
        role="radio"
        type="button"
      >
        <div
          class="flex items-start gap-3"
        >
          <span
            class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-full border-2 text-xs font-bold transition-colors border-[var(--color-primary)] bg-[var(--color-primary)] text-white"
          >
            <svg
              fill="currentColor"
              height="13"
              viewBox="0 0 256 256"
              width="13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M168,152a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,152Zm-8-40H96a8,8,0,0,0,0,16h64a8,8,0,0,0,0-16Zm56-64V216a16,16,0,0,1-16,16H56a16,16,0,0,1-16-16V48A16,16,0,0,1,56,32H92.26a47.92,47.92,0,0,1,71.48,0H200A16,16,0,0,1,216,48ZM96,64h64a32,32,0,0,0-64,0ZM200,48H173.25A47.93,47.93,0,0,1,176,64v8a8,8,0,0,1-8,8H88a8,8,0,0,1-8-8V64a47.93,47.93,0,0,1,2.75-16H56V216H200Z"
              />
            </svg>
          </span>
          <div
            class="min-w-0 flex-1"
          >
            <p
              class="truncate text-sm font-medium text-[var(--color-text)]"
            >
              Programa vacío
            </p>
            <p
              class="text-xs text-[var(--color-text-muted)]"
            >
              Empieza con una vista general y construye objetivos, actividades y frecuencias sin depender del Excel.
            </p>
          </div>
        </div>
      </button>
      <div
        aria-label="Programas existentes"
        class="space-y-2"
        role="radiogroup"
      >
        <p
          class="text-[11px] font-semibold uppercase tracking-wide text-[var(--color-text-subtle)]"
        >
          Períodos anteriores
        </p>
        <button
          aria-checked="false"
          class="w-full rounded-[var(--radius)] border p-3 text-left transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)] hover:shadow-sm"
          role="radio"
          type="button"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-full border-2 text-xs font-bold transition-colors border-[var(--color-border)] text-[var(--color-text-faint)]"
            >
              26
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <div
                class="flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="truncate text-sm font-medium text-[var(--color-text)]"
                    >
                      Programa General 2026
                    </p>
                    <span
                      class="inline-flex items-center gap-1.5 rounded-[var(--radius-full)] px-2 py-0.5 whitespace-nowrap font-mono font-semibold uppercase tracking-wider text-[var(--color-success-ink)] bg-[var(--color-success-tint)] text-[11px]"
                    >
                      Activo
                    </span>
                  </div>
                  <div
                    class="mt-1 flex flex-wrap items-center gap-x-3 gap-y-1 text-xs text-[var(--color-text-muted)]"
                  >
                    <span>
                      Año 
                      2026
                       · v
                      1
                    </span>
                    <span>
                      89
                       actividades
                    </span>
                    <span
                      class="font-medium text-[var(--color-signal)]"
                    >
                      75
                      % cumplimiento
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-checked="false"
          class="w-full rounded-[var(--radius)] border p-3 text-left transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)] hover:shadow-sm"
          role="radio"
          type="button"
        >
          <div
            class="flex items-start gap-3"
          >
            <span
              class="mt-0.5 flex h-7 w-7 shrink-0 items-center justify-center rounded-full border-2 text-xs font-bold transition-colors border-[var(--color-border)] text-[var(--color-text-faint)]"
            >
              25
            </span>
            <div
              class="min-w-0 flex-1"
            >
              <div
                class="flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="truncate text-sm font-medium text-[var(--color-text)]"
                    >
                      Programa Faenas 2025
                    </p>
                    <span
                      class="inline-flex items-center gap-1.5 rounded-[var(--radius-full)] px-2 py-0.5 whitespace-nowrap font-sans font-medium normal-case tracking-normal text-[var(--color-text-muted)] bg-[var(--color-surface-2)] text-[11px]"
                    >
                      Cerrado
                    </span>
                  </div>
                  <div
                    class="mt-1 flex flex-wrap items-center gap-x-3 gap-y-1 text-xs text-[var(--color-text-muted)]"
                  >
                    <span>
                      Año 
                      2025
                       · v
                      3
                    </span>
                    <span>
                      120
                       actividades
                    </span>
                    <span
                      class="font-medium text-[var(--color-success)]"
                    >
                      92
                      % cumplimiento
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col-reverse gap-2 border-t border-[var(--color-border)] pt-5 sm:flex-row sm:items-center sm:justify-between"
    >
      <button
        aria-busy="false"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-sans font-semibold text-[13px] leading-[var(--leading-label)] rounded-[var(--radius)] select-none cursor-pointer transition-[background-color,box-shadow,transform] duration-[var(--duration-fast)] ease-[var(--ease-out)] motion-safe:active:scale-[0.97] focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--color-primary)] disabled:pointer-events-none disabled:opacity-45 text-[var(--color-text-muted)] hover:bg-[var(--color-surface-2)] hover:text-[var(--color-text)] h-8 px-4"
        type="button"
      >
        Cancelar
      </button>
      <div
        class="flex items-center gap-3"
      >
        <p
          class="hidden text-xs text-[var(--color-text-faint)] sm:block"
        >
          Programa vacío con una vista general
        </p>
        <button
          data-loading-label="Creando..."
          type="submit"
        >
          Crear programa
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`PdtpCreateProgramForm > F: Snapshot > coincide con el snapshot del estado vacío (sin programas existentes) 1`] = `
<form
  action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  class="overflow-hidden rounded-[var(--radius-2xl)] border border-[var(--color-border)] bg-[var(--color-surface)] shadow-[var(--shadow-card)]"
>
  <input
    name="userId"
    type="hidden"
    value="user-1"
  />
  <div
    class="border-b border-[var(--color-border)] bg-[var(--color-surface-2)] px-5 py-4 sm:px-6"
  >
    <div
      class="flex items-center gap-1 sm:gap-2"
    >
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-primary)] text-white"
        >
          <svg
            fill="currentColor"
            height="12"
            viewBox="0 0 256 256"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M208,144a15.78,15.78,0,0,1-10.42,14.94L146,178l-19,51.62a15.92,15.92,0,0,1-29.88,0L78,178l-51.62-19a15.92,15.92,0,0,1,0-29.88L78,110l19-51.62a15.92,15.92,0,0,1,29.88,0L146,110l51.62,19A15.78,15.78,0,0,1,208,144ZM152,48h16V64a8,8,0,0,0,16,0V48h16a8,8,0,0,0,0-16H184V16a8,8,0,0,0-16,0V32H152a8,8,0,0,0,0,16Zm88,32h-8V72a8,8,0,0,0-16,0v8h-8a8,8,0,0,0,0,16h8v8a8,8,0,0,0,16,0V96h8a8,8,0,0,0,0-16Z"
            />
          </svg>
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text)]"
        >
          Crear
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-primary)]/30"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          2
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Editar actividades
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-border)]"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          3
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Aprobar
        </span>
      </div>
      <div
        aria-hidden="true"
        class="h-px flex-1 min-w-[1rem] bg-[var(--color-border)]"
      />
      <div
        class="flex items-center gap-1.5"
      >
        <span
          class="flex h-6 w-6 items-center justify-center rounded-full text-[11px] font-bold transition-colors bg-[var(--color-surface)] text-[var(--color-text-faint)]"
        >
          4
        </span>
        <span
          class="hidden text-xs font-medium sm:inline text-[var(--color-text-faint)]"
        >
          Activar
        </span>
      </div>
    </div>
    <p
      class="mt-3 text-xs text-[var(--color-text-muted)]"
    >
      Paso 1: Definir año y título. Después podrás definir objetivos, actividades y su frecuencia.
    </p>
  </div>
  <div
    class="flex flex-col gap-6 p-5 sm:p-6"
  >
    <div
      aria-label="¿Qué año quieres planificar?"
      role="group"
    >
      <p
        class="text-xs font-semibold uppercase tracking-wide text-text-subtle mb-2"
      >
        ¿Qué año quieres planificar?
      </p>
      <input
        name="year"
        type="hidden"
        value="2026"
      />
      <div
        aria-label="Seleccionar año"
        class="flex flex-wrap gap-2"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-text)]"
          >
            2025
          </span>
          <span
            class="text-[9px] text-[var(--color-text-faint)]"
          >
            Pasado
          </span>
        </button>
        <button
          aria-checked="true"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-primary)] bg-[var(--color-primary-tint)] ring-1 ring-[var(--color-primary)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-primary-ink)]"
          >
            2026
          </span>
        </button>
        <button
          aria-checked="false"
          class="group relative flex flex-col items-center gap-1 rounded-[var(--radius)] border px-4 py-2.5 text-center transition-all border-[var(--color-border)] bg-[var(--color-surface)] hover:border-[var(--color-border-strong)] hover:bg-[var(--color-surface-2)]"
          role="radio"
          type="button"
        >
          <span
            class="text-sm font-semibold text-[var(--color-text)]"
          >
            2027
          </span>
        </button>
        <button
          aria-checked="false"
          class="flex items-center justify-center rounded-[var(--radius)] border border-dashed px-4 py-2.5 text-xs text-[var(--color-text-muted)] transition-colors border-[var(--color-border)] hover:border-[var(--color-border-strong)] hover:text-[var(--color-text)]"
          role="radio"
          type="button"
        >
          Otro año…
        </button>
      </div>
    </div>
    <div
      class="flex flex-col gap-0"
    >
      <label
        class="block text-sm font-medium text-[var(--color-text)] leading-tight mb-1.5"
        for="pdtp-title"
        id="pdtp-title-label"
      >
        Título del programa
        <span
          aria-hidden="true"
          class="ml-0.5 text-[var(--color-danger)]"
        >
          *
        </span>
      </label>
      <input
        class="flex h-9 w-full rounded-(--radius-lg) border border-[var(--color-border-control)] bg-[var(--color-surface)] px-3.5 py-1.5 font-sans text-sm text-[var(--color-text)] placeholder:text-[var(--color-text-subtle)] transition-[border-color,box-shadow] duration-[var(--duration-fast)] ease-[var(--ease-out)] hover:border-[var(--color-border-control-hover)] focus:outline-none focus:border-[var(--color-primary)] focus:ring-2 focus:ring-[var(--color-primary-line)] disabled:cursor-not-allowed disabled:opacity-50 disabled:bg-[var(--color-surface-2)] disabled:hover:border-[var(--color-border-control)] read-only:bg-[var(--color-surface-2)] read-only:cursor-default read-only:hover:border-[var(--color-border-control)]"
        id="pdtp-title"
        name="title"
        placeholder="Programa de Trabajo Preventivo SG-SST 2026"
        required=""
        value="Programa de Trabajo Preventivo SG-SST 2026"
      />
      <p
        class="mt-1 text-[11px] text-[var(--color-text-faint)]"
      >
        Se genera automáticamente. Puedes editarlo si lo necesitas.
      </p>
    </div>
    <div
      class="flex flex-col-reverse gap-2 border-t border-[var(--color-border)] pt-5 sm:flex-row sm:items-center sm:justify-between"
    >
      <button
        aria-busy="false"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-sans font-semibold text-[13px] leading-[var(--leading-label)] rounded-[var(--radius)] select-none cursor-pointer transition-[background-color,box-shadow,transform] duration-[var(--duration-fast)] ease-[var(--ease-out)] motion-safe:active:scale-[0.97] focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--color-primary)] disabled:pointer-events-none disabled:opacity-45 text-[var(--color-text-muted)] hover:bg-[var(--color-surface-2)] hover:text-[var(--color-text)] h-8 px-4"
        type="button"
      >
        Cancelar
      </button>
      <div
        class="flex items-center gap-3"
      >
        <p
          class="hidden text-xs text-[var(--color-text-faint)] sm:block"
        >
          Programa vacío con una vista general
        </p>
        <button
          data-loading-label="Creando..."
          type="submit"
        >
          Crear programa
        </button>
      </div>
    </div>
  </div>
</form>
`;
